# spe

./: .gitignore  CMakeLists.txt
core8/: CMakeLists.txt  core8_test.cpp
demo/: CMakeLists.txt  CMakeSettings.json  demo.cpp
eda/: CMakeLists.txt  eda_device.h  formatted_string.h  main.cpp
eng/: array2d.h  connectable.h  eng6.h  eng_traits.h  event.h  factory.h  file_input_stream.h  func.h  input_stream.h  melspec_impl.h  mfcc_impl.h  msg_and_error.h  numpy.h  params.h  processor.h  python.h  quick_queue.h  quick_queue_ut.h  rate_measure.h  ratio.h  resample_impl.h  scheduler.h  singleton.h  unit_test.h  uri.h  wavfile.h  websocket_stream.h  xml_loader.h
eng/procs/: ac.h  compound_processor.h  data_source.h  dct.h  dnn.h  ewma.h  expr.h  fft.h  fft_impl.h  fft_ut.h  fir_filt.h  iir_filt.h  lattice_filter.h  lattice_filter_ut.h  lpc.h  lpc_ut.h  mag.h  matlab_file_output.h  melspec.h  melspec_ut.h  melspec_ut.h.mat  melspec_ut.mat  mfcc.h  mfcc_ut.h  mfcc_ut.h.mat  mux_demux.h  mux_demux_ut.h  numpy_file_reader.h  numpy_file_writer.h  numpy_ut.h  psd.h  psd_ut.h  rand.h  rate_changer.h  resampler.h  resampler_ut.h  running_stats.h  samples.h  sp_fir_filter.h  sp_iir_filter.h  (+8 more)
eng6/: array2d.h  connectable.h  dag.h  dictionary.h  doxygen.cfg  eng6.h  eng_traits.h  event.h  exprtk.hpp  file_input_stream.h  filter.h  idx.h  input_stream.h  juliusResampler.h  melspec_impl.h  msg_and_error.h  numpy.h  object.h  processor.h  pugixml.hpp  python.h  quick_queue.h  quick_queue_ut.h  rate_measure.h  ratio.h  resample_impl.h  scheduler.h  unit_test.h  uri.h  wavfile.h  websocket_stream.h  xml_loader.h
eng6/procs/: ac.h  compound_processor.h  data_source.h  dct.h  dnn.h  ewma.h  expr.h  fft.h  fft_impl.h  fft_ut.h  fir_filt.h  iir_filt.h  lattice_filter.h  lattice_filter_ut.h  lpc.h  lpc_ut.h  mag.h  matlab_file_output.h  melspec.h  melspec_ut.h  mux_demux.h  mux_demux_ut.h  numpy_file_reader.h  numpy_file_writer.h  numpy_ut.h  psd.h  psd_ut.h  rand.h  rate_changer.h  resampler.h  resampler_ut.h  running_stats.h  samples.h  sp_lpc.h  sp_nr3_zroots.h  sp_window.h  spectrogram.h  template_proc.h  wav_file_data_source.h  wav_file_reader.h  (+2 more)
eng7/: graph.h  new_processor.h
eng7/procs/: fft.h  fft_impl.h  fir_filt.h  mag.h  numpy_file_reader.h  numpy_file_writer.h  numpy_ut.h  rand.h  rate_changer.h  window.h  window_ut.h
pix2pix/: CMakeLists.txt  pix2pix_test.cpp
pix2pix/artefacts/: dnn_ut.onnx  netG.onnx.x.npy  netG.onnx.x_hat.npy
sdft/: CMakeLists.txt  CMakeLists.txt.do_not_use  gpu.cu  sdft.cpp
test/: CMakeLists.txt  CMakeSettings.json  eng6_tests.cpp  eng7_tests.cpp  spe.sln  spe_test.vcxproj  spe_test.vcxproj.filters
test/artefacts/: model-990.pbtxt
